swapon: better text for "discard", note about swapon in fstab.5
Suggested by Hugh Dickins. Thanks.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/fstab.5
+++ b/mount/fstab.5
@@ -176,8 +176,11 @@ This field describes the mount options associated with the filesystem.
 
 It is formatted as a comma separated list of options.  It contains at least
 the type of mount plus any additional options appropriate to the filesystem
-type. For documentation on the available options, see
+type. For documentation on the available mount options, see
 .BR mount (8).
+For documentation on the available swap options, see
+.BR swapon (8).
+
 Basic file system independent options are:
 .TP
 .B defaults
