--- a/README
+++ b/README
@@ -46,7 +46,7 @@ VERSION SCHEMA:
           <major>.<minor>[.<maint>[.<bugfix>]]
 
              major = fatal and deep changes
-             minor = typical release with new fetures
+             minor = typical release with new features
              maint = maintenance releases; bug fixes only
              bugfix = unplanned releases for critical/security bugs
 
