rtcwake: add 'show' mode for rtc alarm
The 'show' mode prints information on current alarm setting.

[kzak@redhat.com: - code clean up
                  - don't setup alarm on 'disable' mode]

Signed-off-by: Marek Otahal <markotahal@gmail.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/rtcwake.8
+++ b/sys-utils/rtcwake.8
@@ -117,6 +117,10 @@ useful for debugging.
 .TP
 .B disable
 Disable previously set alarm.
+.TP
+.B show
+Print alarm information in format: "alarm: off|on  <time>".
+The time is in ctime() output format, e.g. "alarm: on  Tue Nov 16 04:48:45 2010".
 .RE
 .PP
 .SH NOTES
