--- a/po/es.po
+++ b/po/es.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2000 Beth Powell <bpowell@turbolinux.com>.
 # Copyright (C) 2001, 2002, 2003 Santiago Vila Doncel <sanvila@unex.es>.
 #
-# This file is distributed under the same license as the util-linux-ng package.
+# This file is distributed under the same license as the util-linux package.
 #
 # Beth Powell <bpowell@turbolinux.com>, 2000.
 # Santiago Vila Doncel <sanvila@unex.es>, 2001, 2002, 2003, 2004, 2010.
