--- a/po/ja.po
+++ b/po/ja.po
@@ -1,6 +1,6 @@
 # Japanese messages for util-linux-ng
 # Copyright (C) 2001 Free Software Foundation, Inc.
-# This file is distributed under the same license as the util-linux-ng package.
+# This file is distributed under the same license as the util-linux package.
 #   includes cfdisk original translation by
 #         Hidenobu NABETANI <nabetani@kern.phys.sci.osaka-u.ac.jp>
 # Daisuke Yamashita <yamad@mb.infoweb.ne.jp>, 1999-2001.
