--- a/po/pl.po
+++ b/po/pl.po
@@ -1,6 +1,6 @@
 # Polish translation of util-linux-ng
 # Copyright (C) 2005 Free Software Foundation, Inc.
-# This file is distributed under the same license as the util-linux-ng package.
+# This file is distributed under the same license as the util-linux package.
 # Andrzej Krzysztofowicz <ankry@mif.pg.gda.pl>, 2006.
 # Jakub Bogusz <qboosh@pld-linux.org>, 2009-2010.
 #
