docs: update TODO file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+login-utils:
+-----------
+
+ - clean up error codes
+ - use err() and warn() macros rather than fprintf(stderr, ...)
+
 libblkid
 --------
 
