remove -ng from some files
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ WEB PAGE:
 
 MAILING LIST:
 
-      E-MAIL: util-linux-ng@vger.kernel.org
+      E-MAIL: util-linux@vger.kernel.org
       URL:    http://vger.kernel.org/vger-lists.html#util-linux
 
 
