docs: update TODO file
Here's a patch to update some the TODO list now that the new partx is
merged.

Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -87,6 +87,7 @@ CONTRIBUTORS:
       David Brownell <david-b@pacbell.net>
       David Miller <davem@davemloft.net>
       David Woodhouse <dwmw2@infradead.org>
+      Davidlohr Bueso <dave@gnu.org>
       Denis ChengRq <crquan@gmail.com>
       Dennis Gilmore <dennis@ausil.us>
       Dmitry V. Levin <ldv@altlinux.org>
