partx: fix authors section in man page
Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/partx/partx.8
+++ b/partx/partx.8
@@ -115,7 +115,7 @@ Removes last partition on /dev/sdd.
 .BR parted (8),
 .BR partprobe (8)
 
-.SH SEE ALSO
+.SH AUTHORS
 .nf
 Davidlohr Bueso <dave@gnu.org>
 Karel Zak <kzak@redhat.com>
