--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux 2.19-rc1: Jan 05 2011
+* see docs/v2.19-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux/v2.19/v2.19-rc1-ChangeLog
+
 util-linux-ng 2.18: Jun 30 2010
 * see docs/v2.18-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.18/v2.18-ChangeLog
