findmnt: fix manpage typos
Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/misc-utils/findmnt.8
+++ b/misc-utils/findmnt.8
@@ -123,7 +123,7 @@ to specify the filesystem types on which no action should be taken.  For
 more details see
 .BR mount (8).
 .IP "\fB\-R, \-\-submounts\fP"
-Print recursively all submounts for the selected filesystems. The restictions
+Print recursively all submounts for the selected filesystems. The restrictions
 defined by options \fB\-t\fP, \fB\-O\fP, \fB\-S\fP, \fB\-T\fP and
 \fB\--direction\fP are not applied to submounts. All submounts are always
 printed in tree-like order. The option enables the tree-like output format by
