partx: fix typo in partx.8
Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/partx/partx.8
+++ b/partx/partx.8
@@ -32,7 +32,7 @@ The
 .I disk
 argument is optional when a 
 .I partition 
-argument is provided. It's possible to force scannig on partition (for example
+argument is provided. It's possible to force scanning on partition (for example
 to list nested subpartitions), then the string "-" has to be used, for example:
 
 .RS
