mount: fix reference to cifs-utils in mount.8
Addresses: https://bugzilla.redhat.com/show_bug.cgi?id=651035
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1098,7 +1098,7 @@ These options are accepted but ignored.
 .SH "Mount options for cifs"
 See the options section of the
 .BR mount.cifs (8)
-man page (samba-client package must be installed).
+man page (cifs-utils package must be installed).
 
 .SH "Mount options for coherent"
 None.
