--- a/TODO
+++ b/TODO
@@ -20,6 +20,10 @@ sysfs
  - add lib/sysfs.c with functions that read block device attributes from /sys.
    For more details see devno.c from libblkid, lsblk.c and lomount.c.
 
+lib/tt.c
+--------
+
+ - allows to sort columns, for example sort lsblk(8) output by SIZE
 
 libblkid
 --------
