docs: update TODO
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -1,3 +1,10 @@
+fsprobe
+-------
+
+ - remove the lib/fsprobe.c wrapper for libblkid used in mount and fsck. Use
+   everywhere libblkid from util-linux only.
+ - update ./configure script
+
 login-utils:
 -----------
 
