docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -98,6 +98,7 @@ CONTRIBUTORS:
       Dima Kogan <dkogan@cds.caltech.edu>
       Dmitry V. Levin <ldv@altlinux.org>
       Eric Sandeen <sandeen@redhat.com>
+      Fabian Groffen <grobian@gentoo.org>
       Flávio Leitner <fleitner@redhat.com>
       Florentin Duneau <fduneau@gmail.com>
       Florian Zumbiehl <florz@florz.de>
@@ -134,6 +135,7 @@ CONTRIBUTORS:
       Jim Meyering <meyering@redhat.com>
       Jiro SEKIBA <jir@unicus.jp>
       John Keeping <john.keeping@lineone.net>
+      Jon Grant <jg@jguk.org>
       Jon Ringle <jon@ringle.org>
       Josep Puigdemont <josep.puigdemont@gmail.com>
       Justin B Rye <jbr@edlug.org.uk>
